--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "caniuse-lite": "1.0.30001632",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^5.5.0",
@@ -26,6 +27,7 @@
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
